# astro-instruments

./: .gitignore  .gitmodules  README.md  click_coords.py  image_utils.py
AstroHQ/: IMX477_response.npy  README.md  astro_hq.py  bracket.py  disable_dpc.cron  image_stats.py  spectral_response.npy  spectral_response.npz  utils.py
CAD files/: UV01_V01_boitier.stl  UV04_V01_support_fente.stl  UV08_V01_coulant_ZWO.stl  UV09_V01_support_M1.stl  UV11_V01_guide_M1_M2.stl  UV14_V01_coulant_ATIK314L.stl
DSLR remote/arduino_camera/: arduino_camera.ino
DSLR remote/python_camera/: switch.py
UVEX spectrograph/: README.md  testbed.ipynb
UVEX spectrograph/CAD files/: UV02_housing_cover.stl  UV03_V01_bague_fente.stl  UV05_slit_ring.stl  UV06_V01_interface_fente_claire.stl  UV07_ATIK_camera_mount.stl  UV10_V01_support_M2.stl  UV12_grating_support.stl  UV13_grating_position_lever.stl
indi-rpicam2/: AUTHORS  CMakeLists.txt  config.h.cmake  rpicam2.cpp
peltier-tec/: README.md  code.py  time_utils.py
